platform: avoid crash after calling nl_recv() for old libnl3 version

nl_recv() in libnl3 before version 3.2.15 would return dangling pointers
if nl_recv() fails or has nothing to read [1].

Workaround that by explicitly clearing @buf and @creds.

https://bugzilla.gnome.org/show_bug.cgi?id=767986

[1] https://github.com/thom311/libnl/commit/69468517d0de1675d80f24661ff57a5dbac7275c